--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="description" content="The information program, in JS" />
+  <meta name="author" content="Yoochan Han" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+  <title>GOAT Pizza</title>
+</head>
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">GOAT Pizza!</span>
+      </div>
+    </header>
+    <main class="mdl-layout__content">
+      <form action="#" class="text-box">
+        <h4>Choose your pizza</h4>
+        <div class="right-image">
+          <a href="./Cheese.html">
+            <img src="./CSPizza.png" alt="cheese pizza">
+          </a>
+          <h6>CheesePizza (L16$) (XL20$)</h6>
+        </div>
+        <div class="right-image">
+          <a href="./BaconPotato.html">
+          <img src="./BCPTPizza.png" alt="bacon potato pizza">
+        </a>
+          <h6>BaconPotatoPizza (L20.99$) (XL25.99$)</h6>
+        </div>
+        <div class="right-image">
+          <a href="./pineapple.html">
+          <img src="./PAPizza.png" alt="pineapple pizza ">
+        </a>
+          <h6>PineapplePizza (L18.89$) (XL23.27$)</h6>
+        </div>
+        <br />
+        <hr />
+        <div class="information">
+          <p>We don't serve the real pizza, we provide only reciept</p>
+          <p style="float: right; position: relative; right: 40px;"> Customer Inquiry mail : yoochanai12@gmail.com</p>
+        </div>
+      </form>
+  </div>
+  </main>
+  </div>
+</body>
 </html>
