--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
       <form action="#" class="text-box">
         <h4>Choose your pizza</h4>
         <div class="right-image">
-          <a href="./Cheese.html">
+          <a href="./orderPage.html">
             <img src="./CSPizza.png" alt="cheese pizza">
           </a>
           <h6>CheesePizza (L16$) (XL20$)</h6>
         </div>
         <div class="right-image">
-          <a href="./BaconPotato.html">
+          <a href="./orderPage.html">
           <img src="./BCPTPizza.png" alt="bacon potato pizza">
         </a>
           <h6>BaconPotatoPizza (L20.99$) (XL24.99$)</h6>
         </div>
         <div class="right-image">
-          <a href="./pineapple.html">
+          <a href="./orderPage.html">
           <img src="./PAPizza.png" alt="pineapple pizza ">
         </a>
           <h6>PineapplePizza (L18.89$) (XL22.89$)</h6>
