--- a/orderPage.html
+++ b/orderPage.html
@@ -23,13 +23,13 @@
       <form action="#" class="text-box">
         <div style="position: relative; left: 20px;">
           <div>
-            <img src="./CSPizza.png" alt="CheesePizza" style="width: 20%; height: 20%;">
+            <img src="./CSPizza.png" alt="CheesePizza" style="width: 15%; height: 15%;">
             <h4>Cheese Pizza</h4>
             <p>(L16$) (XL20$)</p>
-            <img src="./BCPTPizza.png" alt="BaconPotatoPizza" style="width: 20%; height: 20%;">
+            <img src="./BCPTPizza.png" alt="BaconPotatoPizza" style="width: 15%; height: 15%;">
             <h4>Bacon Potato Pizza</h4>
             <p>(L20.99$) (XL24.99$)</p>
-            <img src="./PAPizza.png" alt="PineapplePizza" style="width: 20%; height: 20%;">
+            <img src="./PAPizza.png" alt="PineapplePizza" style="width: 15%; height: 15%;">
             <h4>Pineapple Pizza</h4>
             <p>(L18.89$) (XL22.89$)</p>
           </div>
@@ -68,24 +68,25 @@
         </label>
         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-2">
           <input type="checkbox" id="checkbox-2" class="mdl-checkbox__input">
-          <span class="mdl-checkbox__label">Extra Bacon(+1.50$)</span>
+          <span class="mdl-checkbox__label">Extra potato(+1.20$)</span>
         </label>
         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-3">
           <input type="checkbox" id="checkbox-3" class="mdl-checkbox__input">
-          <span class="mdl-checkbox__label">Extra potato(+1.00$)</span>
+          <span class="mdl-checkbox__label">Extra pineapple(+1.40$)</span>
         </label>
         <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-4">
           <input type="checkbox" id="checkbox-4" class="mdl-checkbox__input" >
-          <span class="mdl-checkbox__label">Extra pineapple(+1.20$)</span>
+          <span class="mdl-checkbox__label">Extra bacon(+1.60$)</span>
         </label>
-        <p id="test"></p>
-        <p id="arr"></p>
         <!-- Colored raised button -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="test()">
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" onclick="orderThePizza()">
           Order!
         </button>
       </div>
       </form>
+      <div>
+        <p id="test"></p>
+      </div>
       <div class="information">
         <br />
         <hr />
