--- a/orderPage.html
+++ b/orderPage.html
@@ -85,7 +85,7 @@
       </div>
       </form>
       <div>
-        <p id="test"></p>
+        <p id="cost"></p>
       </div>
       <div class="information">
         <br />
